# WireTuner

./: .gitignore  .graphql-schema-linterrc  .markdownlint.json  .spectral.yml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_I2_T5.md  IMPLEMENTATION_SUMMARY_I3T6.md  README.md  analysis_options.yaml  justfile  melos.yaml  pubspec.yaml
.codemachine/: task_i4_t3_summary.md  template.json
.codemachine/artifacts/: iteration_i1_completion.md
api/: api_manifest.json  event_schema.dart  event_types.md  file_format_spec.md  save_load.yaml  schema.graphql  telemetry.yaml
docs/: README.md  rendering_pipeline.md
integration_test/: anchor_drag_integration_test.dart  ellipse_tool_workflow_test.dart  handle_drag_integration_test.dart  import_roundtrip_test.dart  load_upgrade_test.dart  multi_selection_test.dart  object_dragging_test.dart  pen_tool_bezier_path_test.dart  pen_tool_handle_adjustment_test.dart  pen_tool_straight_path_test.dart  polygon_tool_workflow_test.dart  rectangle_tool_workflow_test.dart  save_flow_test.dart  star_tool_workflow_test.dart  undo_redo_test.dart.disabled
lib/: app.dart  main.dart
server/worker-export/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/worker-export/src/: converter.rs  job.rs  lib.rs  main.rs  queue.rs  telemetry.rs
server/worker-export/test/: pdf_export_test.rs
test/: svg_importer_gradient_test.dart  svg_roundtrip_test.dart  widget_test.dart
tools/: history_export.dart  install.cjs  install.sh  lint.cjs  lint.sh  run.cjs  run.sh  test.cjs  test.sh
windows/: CMakeLists.txt
(+454 files in other folders)
